examples/neg/high_auction/auctionhouse.oio
AUCTIONHOUSE

channel ALICE/AUCTION_STATUS@{H} : (string@{H}*int@{H})@{H} [AUCTIONHOUSE/BID:1; ALICE/AUCTION_STATUS:1;BOB/AUCTION_STATUS:1;ALICE/AUCTION_OVER:1;BOB/AUCTION_OVER:1];
channel ALICE/AUCTION_OVER@{H} : (string@{H}*int@{H})@{H};

channel BOB/AUCTION_STATUS@{H} : (string@{H}*int@{H})@{H} [AUCTIONHOUSE/BID:1; ALICE/AUCTION_STATUS:1;BOB/AUCTION_STATUS:1;ALICE/AUCTION_OVER:1;BOB/AUCTION_OVER:1];
channel BOB/AUCTION_OVER@{H} : (string@{H}*int@{H})@{H};

var winning_bid : (string@{H}*int@{H})@{H} = ("",0);

START@{} (i : int@{}) [AUCTIONHOUSE/BID:1; ALICE/AUCTION_STATUS:1;BOB/AUCTION_STATUS:1;ALICE/AUCTION_OVER:1;BOB/AUCTION_OVER:1] {
    send(ALICE/AUCTION_STATUS, winning_bid);
    send(BOB/AUCTION_STATUS, winning_bid);
}

BID@{H} (bid : (string@{}*int@{H})@{}) [AUCTIONHOUSE/BID:1; ALICE/AUCTION_STATUS:1;BOB/AUCTION_STATUS:1;ALICE/AUCTION_OVER:1;BOB/AUCTION_OVER:1] {
    oblif snd bid == -1
    then {
        send(ALICE/AUCTION_OVER, winning_bid);
        send(BOB/AUCTION_OVER, winning_bid);
    } else {
        oblif snd winning_bid < snd bid
        then winning_bid ?= bid;
        else skip;

        send(ALICE/AUCTION_STATUS, winning_bid);
        send(BOB/AUCTION_STATUS, winning_bid);
    }
}